switching from throwing exception to persisting error report